added getRecommendationsBasedOffMovie function
